<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/content_deep_bg"
              >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/chonglou_home_top"
        android:id="@+id/llFloorRanking">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/chonglou_home_list"
            >

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/lvFloorRanking"
                android:divider="@null"
                android:scrollbars="none"
                />
        </LinearLayout>

        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/my_ranking"
            android:id="@+id/textView"
            android:background="@drawable/title"
            android:textColor="@color/green"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:text="@string/activity_introduce"
            style="@style/MainTextViewStyle"/>

        <TextView
            android:text="@string/mode"
            style="@style/MainTextViewStyle"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:text="@string/times"
            style="@style/MainTextViewStyle"/>

        <TextView
            android:text="@string/floor_rewards"
            style="@style/MainTextViewStyle"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/tvRewardsGoods"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/tvJoinTitle"
        android:text="@string/join_activity"
        style="@style/MainTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15dp"
        android:background="@color/dark_green"
        />

        <TextView
            style="@style/MainTextViewStyle"
            android:text="@string/today_free_join_times"
            android:layout_below="@+id/tvJoinTitle"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/tvTodayFreeTimes"
            android:layout_alignParentLeft="true"
            />

        <TextView
            android:id="@+id/tvToolsJoinTimes"
            style="@style/MainTextViewStyle"
            android:text="@string/tools_join_times"
            android:layout_below="@+id/tvTodayFreeTimes"
            android:layout_alignLeft="@+id/tvTodayFreeTimes"
            android:layout_marginTop="10dp"
           />

        <TextView
            android:id="@+id/tvMyRecords"
            style="@style/MainTextViewStyle"
            android:text="@string/my_records"
            android:layout_below="@+id/tvToolsJoinTimes"
            android:layout_alignLeft="@+id/tvTodayFreeTimes"
            android:layout_marginTop="10dp"
            />

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:id="@+id/btnEnter"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            style="@style/CommonButtonStyle"
            android:layout_marginRight="10dp"/>

        <TextView
            style="@style/MainTextViewStyle"
            android:text="@string/tools_amount"
            android:id="@+id/tvToolsAmount"
            android:layout_alignTop="@+id/tvTodayFreeTimes"
            android:layout_toLeftOf="@+id/btnEnter"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/ruban_make"/>

    </RelativeLayout>

</LinearLayout>